# libfp

./: .gitignore  CMakeLists.txt  Doxyfile
.github/workflows/: build-docs.yaml
docs/: conf.py  cpp.md  doxygen.rst  index.md
include/fp/: bitmask.h  dynarray.h  dynarray.hpp  fnv1a.h  fnv1a.hpp  hash.h  hash.hpp  pointer.h  pointer.hpp  string.h  string.hpp
include/fp/hash/: dictionary.hpp  fnv1a.h  fnv1a.hpp  map.h  map.hpp  table.h
tests/: compiles.c  fp.tests.cpp  fp.tests.cpp-api.cpp  profile.config.hpp  profile.hpp
